[package]
name = "kisserss"
version = "0.1.0"
edition = "2021"
authors = ["SarahGreyWolf <m.sarahgreywolf@outlook.com>"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
greyxml = {path = "./greyxml"}
ratatui = { version = "0.22.0", features = ["all-widgets"] }
reqwest = { version = "0.11.18", features = ["blocking", "default-tls"], default-features = false }

[workspace]
members = ["greyxml"]
